--- a/src/App.css
+++ b/src/App.css
@@ -153,6 +153,17 @@ nav ul li a {
     }
   }
 }
+.story-text {
+  letter-spacing: 1.5px;
+  h2 {
+    padding-bottom: 24px;
+  }
+}
+.story-card-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px;
+}
 @media only screen and (max-width: 768px) {
   #root {
     width: 100%;
