--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@ h3 {
 }
 .header-logo {
   display: flex;
+  justify-content: center;
   align-items: center;
   font-family: "Gluten";
   font-size: 20px;
@@ -159,11 +160,67 @@ nav ul li a {
     padding-bottom: 24px;
   }
 }
-.story-card-container{
+.story-card-container {
   display: flex;
   flex-wrap: wrap;
   gap: 48px;
 }
+
+.footer-container {
+  background-color: #1c1812;
+  color: #f7f7f6;
+  width: 100%;
+  flex-direction: column;
+  padding: 24px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .copyright-text {
+    font-size: 12px;
+    padding-top: 36px;
+  }
+}
+.footer-internal-container {
+  width: 100%;
+  max-width: 1024px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  nav ul {
+    padding-left: 24px;
+  }
+  .footer-cols {
+    display: flex;
+  }
+  .social-icons {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    a {
+      padding: 8px;
+    }
+  }
+  nav ul li a {
+    text-decoration: none;
+    color: #f7f7f6;
+    font-family: "Inter";
+    font-size: 16px;
+    letter-spacing: 0.2px;
+    padding: 4px 0;
+    display: flex;
+    &:visited {
+      color: #f7f7f6;
+    }
+    &:active {
+      color: #f7f7f6;
+    }
+    &.selected {
+      border-bottom: 2px solid #1c1812;
+      padding: 4px 0 2px 0;
+    }
+  }
+}
+
 @media only screen and (max-width: 768px) {
   #root {
     width: 100%;
@@ -293,5 +350,50 @@ nav ul li a {
   .mob-l-r-pad-24 {
     padding-left: 24px;
     padding-right: 24px;
+  }
+  .story-text {
+    padding: 40px 24px;
+    letter-spacing: 1.5px;
+    h2 {
+      font-size: 40px;
+      padding-bottom: 24px;
+      border-bottom: 1px solid #c6c5c3;
+    }
+  }
+  .story-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0px;
+  }
+
+  .footer-internal-container {
+    flex-direction: column;
+    .logo-img {
+      width: 72px;
+      filter: brightness(4);
+    }
+    .nav-bar {
+      display: flex;
+      padding: 8px 0;
+    }
+    nav ul {
+      display: flex;
+      background-color: inherit;
+      flex-direction: row;
+      justify-content: center;
+      position: relative;
+      top: 0;
+      left: 0;
+      padding-left: 0;
+    }
+    .footer-cols {
+      display: flex;
+      flex-direction: column;
+    }
+    .social-icons {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+    }
   }
 }
