--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@
   flex-direction: column;
   font-family: "inter";
 }
+
+.pad-t-b-40 {
+  padding: 40px 0;
+}
 .mob-hide {
   display: block;
 }
@@ -44,12 +48,12 @@ h3 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.7); 
-  backdrop-filter: blur(5px); 
+  background-color: rgba(255, 255, 255, 0.7);
+  backdrop-filter: blur(5px);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000; 
+  z-index: 1000;
 }
 
 .loading-spinner {
@@ -217,6 +221,9 @@ nav ul li a {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  .logo-img {
+    filter: brightness(4);
+  }
   nav ul {
     padding-left: 24px;
   }
@@ -267,20 +274,24 @@ nav ul li a {
     display: block;
   }
   .nav-bar ul {
-    display: none;
     list-style: none;
     padding: 0;
     margin: 0;
     flex-direction: column;
     position: absolute;
-    top: 60px;
-    left: 0;
-    width: 100%;
+    top: -100%;
+    transition: all 0.4s ease-in-out;
+    right: 0;
+    width:300px;
     background-color: #f0f0f0;
     z-index: 10;
+    li{
+      padding: 0 20px;
+    }
   }
 
   .nav-bar .menu-btn:checked ~ ul {
+    top: 60px;
     display: flex;
   }
 
@@ -401,7 +412,6 @@ nav ul li a {
     flex-direction: column;
     .logo-img {
       width: 72px;
-      filter: brightness(4);
     }
     .nav-bar {
       display: flex;
@@ -415,6 +425,7 @@ nav ul li a {
       position: relative;
       top: 0;
       left: 0;
+      width: 100%;
       padding-left: 0;
     }
     .footer-cols {
