--- a/src/App.css
+++ b/src/App.css
@@ -418,7 +418,7 @@ nav ul li a {
       padding: 8px 0;
     }
     nav ul {
-      display: flex;
+      display: block;
       background-color: inherit;
       flex-direction: row;
       justify-content: center;
